/*
 * Copyright (C) 2018 The ontology Authors
 * This file is part of The ontology library.
 *
 * The ontology is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The ontology is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with The ontology.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package netpb;

message Header {
	uint32 Version = 1;
	bytes PrevBlockHash = 2;
	bytes TransactionsRoot =3;
	bytes BlockRoot = 4;
	uint32 Timestamp = 5;
	uint32 Height = 6;
	uint64 ConsensusData = 7;
	bytes ConsensusPayload = 8;
	bytes NextBookkeeper = 9;
	repeated bytes Bookkeepers = 10;
	repeated bytes SigData = 11;
}

message BlkHeader {
    repeated Header BlkHdr = 1;
}