/*
 * Copyright (C) 2018 The ontology Authors
 * This file is part of The ontology library.
 *
 * The ontology is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The ontology is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with The ontology.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package netpb;

message Sig  {
	bytes InvocationScript = 1;
	bytes VerificationScript = 2;
}


enum TransactionType {
    INVALID = 0;
	Bookkeeper  = 0x02;
	Deploy      = 0xd0;
	Invoke      = 0xd1;
}

message Transaction {
	uint32 Version = 1;
	TransactionType TxType = 2;
	uint32 Nonce = 3;
	uint64 GasPrice = 4;
	uint64 GasLimit = 5;
	bytes Payer = 6;
	bytes Payload = 7;
	uint32 attributes = 8;
	repeated Sig Sigs = 9;
}

message Trn {
    Transaction Transaction = 1;
    uint32 Hop = 2;
}