/*
 * Copyright (C) 2018 The ontology Authors
 * This file is part of The ontology library.
 *
 * The ontology is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The ontology is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with The ontology.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package netpb;

message VersionPayload {
    uint32 Version = 1;
    uint64 Services = 2;
    int64 TimeStamp = 3;
    uint32 SyncPort = 4;
    uint32 HttpInfoPort = 5;
    uint32 ConsPort = 6;
    uint32 UDPPort = 7;
    bytes Cap = 8;
    uint64 Nonce = 9;
    uint64 StartHeight = 10;
    uint32 Relay = 11;
    bool IsConsensus = 12;
}
message Version {
   VersionPayload P = 1;
}